<resources>
    <string name="app_name">MusicAppCompose</string>
    <string name="txtTitulo">Another One Bites the Dust</string>
    <string name="txtGrupo">Queen</string>
    <string name="btnNext">Siguiente</string>
    <string name="btnPrevius">Anterior</string>
    <string name="btnPlay">Reproducir</string>
    <string name="imageDisc">imageDisc</string>
    <string name="time">Control del tiempo</string>
    <string name="volumen">Control de volumen</string>
    <string name="compartir">compartir</string>
    <string name="letra">Letra de la cancion</string>
    <string name="lista">Lista de Canciones</string>
    <string name="start">00:00</string>
    <string name="end">00:00</string>
</resources>